frontend: Fix missing scrollbar in modal
Fix missing scrollbar in modal by adding a fixed height to the modal element.
This is needed for scrollbars to work. If 100% is used, it needs to also be
set on all parent element. <3 css. Adjust bottom padding in the modal to add
up correctly with the bottom padding of each example section.

Link: https://stackoverflow.com/a/32506818

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -597,10 +597,11 @@ button.primary {
 }
 .modal-main {
   font-family: var(--ff);
-  padding: 36px;
+  padding: 36px 36px 16px;
   overflow-y: auto;
   display: flex;
   flex-wrap: wrap;
+  height: calc(100% - var(--header-height));
 }
 #modal .modal-main .section {
   width: var(--modal-section-width);
